# Frankn

./: .gitignore  LICENSE  README.md  frankn-bluprint.md  frankn-host.service  frankn-sig.service
frankn/: README.md  analysis_options.yaml  android_icon_gen  pubspec.yaml
frankn-host/: .host_id  Cargo.toml
frankn-host/src/: main.rs
frankn-host/src/auth/: mod.rs
frankn-host/src/config/: mod.rs  tui.rs
frankn-host/src/fs_sync/: mod.rs
frankn-host/src/signaling/: mod.rs
frankn-host/src/sys/: dc_message_parser.rs  media.rs  mod.rs  notifications.rs  proc_manager.rs  rtc.rs  ssh.rs  system.rs
frankn-host/src/utils/: mod.rs
frankn-signaling-server/: Cargo.toml
frankn-signaling-server/src/: main.rs
frankn-signaling-server/src/utils/: mod.rs
frankn/android/app/: build.gradle.kts
frankn/ios/Runner/: Info.plist
frankn/ios/Runner.xcodeproj/: project.pbxproj
frankn/lib/: main.dart
frankn/lib/screens/: code_editor_screen.dart  file_browser_screen.dart  frankn_dashboard.dart  image_viewer_screen.dart  log_terminal_screen.dart  process_manager_screen.dart  settings_screen.dart  ssh_screen.dart  syslog_screen.dart
frankn/lib/services/: audio_handler.dart  auth_service.dart  file_transfer_mixin.dart  notification_service.dart  settings_service.dart
frankn/lib/utils/: cyber_button.dart  cyber_card.dart  theme.dart  utils.dart
frankn/lib/widgets/: desktop_layout.dart  file_browser_item.dart  host_list_panel.dart  (+6 more)
frankn/linux/: CMakeLists.txt
frankn/test/: widget_test.dart
frankn/web/: index.html  manifest.json
frankn/windows/: CMakeLists.txt
(+28 files in other folders)
