[package]
name = "frankn-host"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
tokio-tungstenite = "0.28"
url = "2.5"
webrtc = "0.14"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.x", features = ["v4"] }
futures-util = "0.3.31"
sha2 = "0.10.9"
rand = "0.9.2"
anyhow = "1.0.100"
cpal = "0.16.0"
argon2 = "0.5.3"
chrono = "0.4.42"
base64 = "0.22.1"
sysinfo = "0.37.2"
zbus = { version = "5", features = ["tokio"] }
zvariant = "5"
hostname = "0.4.2"
hex = "0.4.3"
env_logger = "0.11.8"
clap = { version = "4.5.58", features = ["derive"] }
toml = "1.0.1"
dialoguer = "0.12.0"
qrcode = "0.14.1"
qr2term = "0.3.3"
ratatui = "0.30.0"
crossterm = "0.29.0"
dirs = "6.0.0"
atty = "0.2.14"
